--- a/src/Controls/KarveControls/DataSearchTextBox/DataSearchTextBox.xaml
+++ b/src/Controls/KarveControls/DataSearchTextBox/DataSearchTextBox.xaml
@@ -1,28 +1,18 @@
-﻿<UserControl x:Class="KarveControls.DualFieldSearchBox"
+﻿<UserControl x:Class="KarveControls.SearchTextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KarveControls"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        
-        <Grid.Resources>
-            <Style x:Key="SearchText1"
-                   TargetType="{x:Type TextBox}">
-                <Style.Triggers>
-                    <Trigger Property="IsReadOnly" Value="true">
-                        <Setter Property="Background" Value="DarkSeaGreen" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
-        </Grid.Resources>
         <StackPanel Orientation="Horizontal" x:Name="LayoutRoot">
             <TextBlock x:Name="SearchLabel" Text="{Binding Path=LabelText, PresentationTraceSources.TraceLevel=High}" Width="50"></TextBlock>
-            <TextBox x:Name="SearchTextFirst" Text="{Binding Path=TextContentFirst, PresentationTraceSources.TraceLevel=High}"></TextBox>
-            <TextBox x:Name="SearchTextSecond" Text="{Binding Path=TextContentSecond, PresentationTraceSources.TraceLevel=High}" IsReadOnly="{Binding Path=IsReadOnly}"></TextBox>
+            <TextBox x:Name="SearchText"></TextBox>
             <StackPanel>
                 <ToggleButton Name="PopUpButton" Click="PopUpButton_OnClick" HorizontalAlignment="Left"  Width="40">
                     <Image Name="PopUpButtonImage" Source="{Binding Path=ButtonImage, PresentationTraceSources.TraceLevel=High}" Height="18"/>
@@ -36,16 +26,8 @@
                         <xcdg:DataGridControl x:Name="MagnificerGrid" AllowDrag="True" SelectionMode="Single" 
                                               ReadOnly="True" SelectionUnit="Row" 
                                               NavigationBehavior="RowOnly" SelectionChanged="MagnificerGrid_OnSelectionChanged">
-
+                          
                         </xcdg:DataGridControl>
-                        <!-- <extendedGridControl:ExtendedDataGrid Grid.Row="0" Height="400" VerticalAlignment="Top" 
-                                                              x:Name="MagnificerGrid" 
-                                                              ItemsSource="{Binding MagnificerDataTable}" 
-                                                              SelectionChanged="MagnificerGeneric_OnSelectionChanged"
-                                                              SelectionMode="Extended" 
-                                                              SelectionUnit="FullRow" >
-                        </extendedGridControl:ExtendedDataGrid>
-                        -->
                         <Button Grid.Row="1" Margin="10" Click="ButtonBase_OnClick">Close</Button>
                     </Grid>
                 </Popup>
