--- a/src/Controls/KarveControls/DataRadio/DataRadio.xaml
+++ b/src/Controls/KarveControls/DataRadio/DataRadio.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="KarveControls.DataRadio"
+﻿<local:CommonControl x:Class="KarveControls.DataRadio"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,4 +9,4 @@
     <Grid Name="RadioContext">
             
     </Grid>
-</UserControl>
+</local:CommonControl>
