--- a/src/Controls/KarveControls/DataSearchTextBox1/DataSearchTextBox.xaml
+++ b/src/Controls/KarveControls/DataSearchTextBox1/DataSearchTextBox.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="KarveControls.DataSearchTextBox"
+﻿<local:CommonControl x:Class="KarveControls.DataSearchTextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -34,4 +34,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</UserControl>
+</local:CommonControl>
