--- a/src/Controls/KarveControls/DataGrid/KarveGridTest/KarveGridTest/MainWindow.xaml
+++ b/src/Controls/KarveControls/DataGrid/KarveGridTest/KarveGridTest/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KarveGridTest"
+        xmlns:karveGrid="clr-namespace:KarveGrid;assembly=KarveGrid"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <karveGrid:KarveGridView x:Name="MainGrid" PageSize="100" ColumnWidth="100" ></karveGrid:KarveGridView>
     </Grid>
 </Window>
